# channel_builder_frontend

./: .gitignore  COMPILING_SASS  Cargo.toml  Dockerfile  Makefile  README.md  dev_diesel_env  docker-compose.yml  editor.html  favicon.xcf  index.html  signup.html  structure_thoughts  validate.html  vite.config.js
.github/workflows/: deploy_static_site.yml
backend/: Cargo.toml  Makefile  email_tester.py  in_docker_build_script.sh
backend/migrations/2021-05-18-035505_create_channel_list/: up.sql
backend/migrations/2021-05-18-040830_user_data_add_foreign_key/: down.sql  up.sql
backend/migrations/2021-05-20-140732_roku_sess_keys/: up.sql
backend/migrations/2022-09-04-190250_display_sess_keys/: down.sql  up.sql
backend/src/: api.rs  api_handlers.rs  db.rs  db_models.rs  email.rs  helpers.rs  main.rs  models.rs  new_channel.json  password_hash_version.rs  schema.rs
backend_tester/: .gitignore  test_channel.txt  tester.py
docker/: Dockerfile  Dockerfile-build  Dockerfile-build-testing  Dockerfile-production  Dockerfile-testing  backup_script  build_backend_container.sh  build_release.sh  production-docker-compose.yml  testing-docker-compose.yml
docker/docker-entrypoint-initdb.d/: 0_create_db.sql  copy_sql_script
docker/nginx_user_conf.d/: reverse_proxy.conf
frontend/: Makefile  README
frontend-vite/: README.md  favicon.xcf  package.json  vite.config.js
frontend-vite/src/: CB_Config.ts  EditorApp.vue  SignupApp.vue  ValidationApp.ts  ValidationApp.vue
frontend/content/: app.css  app.js  app.scss  index.html
logo_images/: Channel_Splash.xcf
migrations/2021-05-18-033659_create_user_data/: .up.sql.swp  down.sql  up.sql
migrations/2021-05-18-035505_create_channel_list/: down.sql  up.sql
migrations/2021-05-18-040830_user_data_add_foreign_key/: up.sql
migrations/2021-05-20-135948_front_end_sess_keys/: down.sql  up.sql
migrations/2021-05-20-140732_roku_sess_keys/: down.sql
src/: EditorApp.ts  EditorApp.vue  SignupApp.ts  SignupApp.vue  ValidationApp.vue  main.rs  schema.rs
src/components/: ChannelList.vue  EditorSelection.vue  Login.vue  (+2 more)
static_files/: app.css  app.js  app.scss  index.html
(+10 files in other folders)
