[package]
name = "channel_builder"
version = "0.1.0"
authors = ["Running Stream <runningstreamllc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
argon2 = "0.1"
rand = "0.8"
chrono = "0.4"
lettre = { version = "0.10.0-rc.3", features = ["rustls-tls"] }
thiserror = "1.0.29"
